CLOSED - task 232: Red X in Help Dialog box not showing up https://github.com/infiniteautomation/ma-core-public/issues/issue/232

--- a/Core/web/resources/common.css
+++ b/Core/web/resources/common.css
@@ -374,7 +374,7 @@ html > body .dojoxFloatingPaneTitle {
     background-color: #6D933E;
 }
 html > body .dojoxFloatingCloseIcon {
-    background-image: url(../images/cross_doc.png);
+    background-image: url(/images/cross_doc.png);
     cursor: pointer;
 }
 html > body .dojoxFloatingPaneContent {
